# libsvcd

./: README  bootstrap  configure.ac  libtool
src/: Makefile.am  libservdisc.cpp  libservdisc.h  servdisc.cpp  svcd_node.cpp  svcd_node.h  svcd_nodesfinder.cpp  svcd_nodesfinder.h
tests/: Makefile.am  configfiletest.cpp  initialsetuptest.cpp  payloadsizetest.cpp
tests/data/: configfile
